force-app/main/default/objects/AirLIne__c/AirLIne__c.object-meta.xml
<CustomObject>
    <label>AirLine</label>
    <nameField>
        <label>AirLIne Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AirLines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>