force-app/main/default/objects/AirLIne__c/fields/Founder__c.field-meta.xml
<CustomField>
    <fullName>Founder__c</fullName>
    <label>Founder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>