force-app/main/default/objects/AirLIne__c/fields/Head_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Head_Quarter__c</fullName>
    <label>Head Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>