force-app/main/default/objects/AirLIne__c/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <label>Parent Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>